--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ def grpcVersion = '1.38.1' // CURRENT_GRPC_VERSION
 dependencies {
   compile "io.vertx:vertx-grpc:4.1.2"
   compile 'javax.annotation:javax.annotation-api:1.3.2'
+  implementation 'org.mapdb:mapdb:3.0.8'
   implementation 'org.slf4j:slf4j-api:1.7.32'
   implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
