--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>netty-tcnative-boringssl-static</artifactId>
             <version>2.0.34.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.2.0</version>
+        </dependency>
         <dependency>
             <groupId>org.mortbay.jetty.alpn</groupId>
             <artifactId>jetty-alpn-agent</artifactId>
